pegasus/src/Pegasus/Compiler/tests/invalidMOF/badQualifierDecl4.mof
/* Extra Spaces in Flavors. This should be legal */
Qualifier Abstract : boolean = false, 
    Scope(class, association, indication), 
    Flavor(  EnableOverride  ,   Restricted);
